--- a/package.json
+++ b/package.json
@@ -23,6 +23,14 @@
     "url": "https://github.com/andreasdjs/mini-mean/issues"
   },
   "homepage": "https://github.com/andreasdjs/mini-mean#readme",
+    "keywords": [
+    "mean",
+    "express",
+    "angular",
+    "mongo",
+    "gulp",
+    "sass"
+  ],
   "dependencies": {
     "express": "^4.13.4",
     "gulp": "^3.9.1",
